# vmware-aria-operations-integration-sdk

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  config.json  container_versions.json  index.html  install.bat  install.sh  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  tmp.py  tox.ini
.github/workflows/: aria-operations-integration-sdk.yaml  black.yaml  documentation-ci.yml  documentation.yml
api/: vrops-collector-fwk2-openapi.json
contributing/: README.md  docker.md  documentation.md  http_server.md  index.md  tests.md
development/: docker.md  http_server.md  python_project.md
doc/: adapter.md  adding_content.md  adding_to_an_adapter.md  architecture.md  cloud-proxy-components.puml  config.md  contents.md  describeSchema.xsd  describe_xml.md  docker.md  examples.md  faq.md  get_started.md  guides.md  http_server.md  introduction.md  java_project.md  mp-build.md  mp-init.md  mp-test.md  powershell_project.md  python-integration-module.md  python_project.md  references.md  troubleshooting_and_faq.md
docs/: .pages  README.md  examples.md  get_started.md  index.md  introduction.md  troubleshooting_and_faq.md
docs/development/: http_server.md
docs/documentation/: adding_content.md  adding_to_an_adapter.md  contents.md  docker.md  mp-init.md  references.md
docs/guides/: .pages  adding_content.md  adding_to_an_adapter.md  container_registry_setup.md  creating_a_new_management_pack.md  creating_management_pack.md  extending_an_existing_management_pack.md  guides.md  python_project.md  walkthroughs.md
docs/images/: architecture.md  registry.puml
docs/references/: .pages  architecture.md  config.md  connections.md  global_config.md  mp-build.md  mp-init.md  mp-test.md  project_config.md  project_connections_config.md
docs/tools/: config.md  mp-test.md
docs/troubleshooting_and_faq/: .pages  adapter_design.md  api.md  build.md  collections.md  container_registries.md  docker.md  index.md  installation.md  logs.md  other.md  test.md  vmware_aria_operations_platform.md
examples/: index.html
get_started/: index.html
guides/adding_content/: index.html
guides/adding_to_an_adapter/: index.html
guides/container_registry_setup/: index.html
http-server/: .swagger-codegen-ignore  Dockerfile  requirements.txt  setup.py
images/: build_images.py  cloud-proxy-components.puml  combined.json  registry.puml  update-base-python-adapter-server.py
introduction/: index.html
java-client/: Dockerfile
lib/python/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  attribute.py  event.py  object.py  pyproject.toml  result.py  setup.cfg  suite_api_client.py
lib/python/doc/: aria.html  index.html  search.js  src.html
lib/python/doc/aria/: ops.html
lib/python/doc/aria/ops/: adapter_instance.html  adapter_logging.html  data.html  definition.html  event.html  object.html  pipe_utils.html  result.html  suite_api_client.html  timer.html
lib/python/doc/aria/ops/definition/: adapter_definition.html  assertions.html  attribute.html  credential_type.html  exceptions.html  group.html  object_type.html  parameter.html  units.html
lib/python/doc/src/: aria.html
lib/python/doc/src/aria/: ops.html
lib/python/doc/src/aria/ops/: adapter_instance.html  adapter_logging.html  data.html  definition.html  event.html  object.html  pipe_utils.html  result.html  suite_api_client.html  timer.html
lib/python/doc/src/aria/ops/definition/: adapter_definition.html  assertions.html  attribute.html  credential_type.html  exceptions.html  group.html  object_type.html  parameter.html  units.html
lib/python/src/aria/ops/: __init__.py  adapter_instance.py  adapter_logging.py  attribute.py  certificate_info.py  data.py  event.py  object.py  pipe_utils.py  result.py  suite_api_client.py  timer.py
lib/python/src/aria/ops/definition/: adapter_definition.py  adapter_logging.py  assertions.py  attribute.py  credential_type.py  exceptions.py  group.py  object_type.py  parameter.py  units.py
lib/python/src/vrops/: adapter_instance.py  attribute.py  event.py  object.py  pipe_utils.py  result.py  suite_api_client.py
lib/python/src/vrops/definition/: adapter_definition.py  assertions.py  attribute.py  credential.py  credential_type.py  group.py  object_definition.py  object_type.py  parameter.py  units.py
lib/python/tests/: test_collect_result.py  test_event.py  test_object_key.py  test_result.py  vrops-collector-fwk2-openapi.json
lib/python/tests/definition/: test_adapter_definition.py  test_group_definition.py  test_object_type_definition.py  test_sample_adapter_definition.py
power-shell-client/: Dockerfile
powershell-client/: Dockerfile
python-flask-adapter/: .dockerignore  .swagger-codegen-ignore  Dockerfile  README.md  commands.cfg  requirements.txt  setup.py
sdk/: versions.json
search/: search_index.json
tests/: test_describe_xml.py  test_mp_build.py  test_serialization.py  test_xml_schemas.py
tools/: README.md  build.py  build_and_tag_server_image.py  build_images.py  config.py  constant.py  containeraized_adapter_rest_api.py  init.py  mp_build.py  mp_init.py  mp_test.py  project.py  projects  requirements.txt  statistics.py  test.py
troubleshooting_and_faq/: index.html
vmware_aria_operations_integration_sdk/: adapter_config.py  adapter_container.py  collection_statistics.py  config.py  constant.py  container_versions.json  containerized_adapter_rest_api.py  describe.py  docker_wrapper.py  filesystem.py  logging_format.py  model.py  mp_build.py  mp_init.py  mp_test.py  project.py  propertiesfile.py  serialization.py  stats.py  threading.py  timer.py  ui.py  util.py
vrealize_operations_integration_sdk/: adapter_container.py  build_images.py  collection_statistics.py  config.py  constant.py  container_versions.json  containeraized_adapter_rest_api.py  containerized_adapter_rest_api.py  describe.py  docker_wrapper.py  filesystem.py  logging_format.py  model.py  mp_build.py  mp_init.py  mp_test.py  project.py  serialization.py  stats.py  timer.py  ui.py
(+1791 files in other folders)
