[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests", "lib/python/tests"]

[tool.poetry]
name = "vmware_aria_operations_integration_sdk"
version = "0.5.0"
description = "A set of tools to help users create, test, and build containerized management packs for VMware Aria Operations"
authors = ["Kyle Rokos <krokos@vmware.com>", "Santiago Quiroga Cubillos <squirogacubi@vmware.com>"]
license = "APACHE-2.0"
readme = "README.md"
packages = [{include = "vmware_aria_operations_integration_sdk"}]
include = [
    "vmware_aria_operations_integration_sdk/adapter_template/describeSchema.xsd",
    "vmware_aria_operations_integration_sdk/adapter_template/traversalwSpecSchema.xsd",
    "vmware_aria_operations_integration_sdk/adapter_template/alertDefinitionSchema.xsd",
    "vmware_aria_operations_integration_sdk/api/vmware-aria-operations-collector-fwk2.json",
    "vmware_aria_operations_integration_sdk/api/integration-sdk-definition-endpoint.json",
    "vmware_aria_operations_integration_sdk/container_versions.json",
]
repository = "https://github.com/vmware/vrealize-operations-integration-sdk"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "3.1.30"
aenum = "3.1.11"
openapi-schema-validator = "0.2.3"
openapi-spec-validator = "0.4.0"
lxml = "4.9.2"
prompt-toolkit = "3.0.29"
vmware-aria-operations-integration-sdk-lib = "^0.7.1"
docker = "6.1.1"
httpx = "0.23.0"
xmlschema = "^2.1.1"
pillow = "^9.3.0"
importlib-resources = "^5.10.0"
openapi-core = "0.15.0"
importlib-metadata = "^5.0.0"
sen = "^0.6.2"
jsonschema-spec = "^0.1.2"
validators = "^0.20.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^65.6.3"
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.10.0"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
mp-init = "vmware_aria_operations_integration_sdk.mp_init:main"
mp-test = "vmware_aria_operations_integration_sdk.mp_test:main"
mp-build = "vmware_aria_operations_integration_sdk.mp_build:main"
