[metadata]
name = vrealize-operations-integration-sdk-lib
version = 0.2.0
author = VMware, Inc.
author_email = krokos@vmware.com
description = Object model for interacting with the vROps Containerized API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vmware/vrealize-operations-integration-sdk
project_urls =
    Bug Tracker = https://github.com/vmware/vrealize-operations-integration-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
