[metadata]
name = vmware-aria-operations-integration-sdk-lib
version = 1.1.0
author = Broadcom
author_email = kyle.rokos@broadcom.com
description = Object model for interacting with the VMware Cloud Foundation Operations Containerized API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vmware/vmware-aria-operations-integration-sdk
project_urls =
    Bug Tracker = https://github.com/vmware/vmware-aria-operations-integration-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aenum == 3.1.11
    cryptography == 44.0.0

[options.package_data]
* = py.typed

[options.packages.find]
where = src
